More top of page spacing fixes

--- a/civicrm.css
+++ b/civicrm.css
@@ -157,6 +157,11 @@ a.btn:focus {
 	font-size: 13px !important;
 }
 
+/* css_ra3UM2mD4Ock-yArSMzRC5DnsGhkI-soZ8MM2pEbLKA.css | https://bucks.healthwatchcrm.co.uk/sites/bucks.healthwatchcrm.co.uk/files/css/css_ra3UM2mD4Ock-yArSMzRC5DnsGhkI-soZ8MM2pEbLKA.css */
+
+.main-content .container {
+	padding-top: 0 !important;
+}
 
 /* Pre d10 */
 
